# unspsc

./: .gitignore  README.md  flake.nix  justfile  pyproject.toml
.github/workflows/: pages.yml
tests/: conftest.py  test_cli.py  test_codes.py  test_concordance.py  test_generate.py  test_letters.py  test_model.py  test_reader.py  test_render.py
unspsc_cards/: __init__.py  __main__.py  cli.py  codes.py  concordance.py  generate.py  letters.py  model.py  reader.py  render.py
unspsc_cards/templates/: alpha_index.html.j2  alpha_page.html.j2  card.html.j2  index.html.j2
