[tool.poetry]
name = "unspsc-cards"
version = "0.1.0"
description = "Generate a static, navigable website of HTML index cards from the UNSPSC codeset."
authors = ["dboitnot <dboitnot@gmail.com>"]
readme = "README.md"
packages = [{ include = "unspsc_cards" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2"
openpyxl = "^3.1"
jinja2 = "^3.1"
typer = "^0.26.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
ruff = "^0.5"
mypy = "^1.10"

[tool.poetry.scripts]
unspsc-cards = "unspsc_cards.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
